<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_card_form"
            android:icon="@drawable/ic_add_card"
            android:title="@string/add_card_man" />
        <item
            android:id="@+id/menu_card_camera"
            android:icon="@drawable/ic_camera_card"
            android:title="@string/add_card_camera" />
        <item
            android:id="@+id/menu_view_cards"
            android:icon="@drawable/ic_card"
            android:title="@string/view_cards" />
    </group>

    <item android:title="@string/drawer_action">
        <menu>
            <item
                android:id="@+id/menu_comm_share"
                android:icon="@drawable/ic_play"
                android:title="@string/process_code"/>
            <item
                android:id="@+id/menu_comm_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send"/>
        </menu>
    </item>
</menu>